Refactoring changes for workflow || Ramakrishna

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -11,14 +11,15 @@ screenshot_on_failure = true
 logs_directory = build/logs
 
 # Application properties
-APP_BASE_URL=http://index.digitalhealthindex.org/map
+APP_BASE_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/map
 INPUT_FORM_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
-ADMIN_URL = http://admin:admin@localhost:8080/admin/
+ADMIN_URL = http://admin:admin@gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/admin/
 
 # For webdriver
 BROWSER=chrome
 CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
 
 # For API Endpoints
-API_URL = http://index.digitalhealthindex.org/api
+API_URL = http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/api
 PHASES = /phases
+HEALTH_INDICATOR_COUNTRIES = /countries_health_indicator_scores
