--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation 'com.thoughtworks.gauge:gauge-java:0.9.1'
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation 'org.json:json:20220924'
+    implementation 'io.github.bonigarcia:webdrivermanager:5.3.1'
     testImplementation 'junit:junit:4.12'
     testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.20.2'
     testImplementation 'io.rest-assured:rest-assured:5.3.0'
