--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -14,12 +14,15 @@ logs_directory = build/logs
 APP_BASE_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/map
 INPUT_FORM_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
 ADMIN_URL = http://admin:admin@gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/admin/
+#APP_BASE_URL=http://localhost:5173/map
+#INPUT_FORM_URL=http://localhost:5173/health_indicator_questionnaire
+#ADMIN_URL = http://admin:admin@localhost:5173/admin/
 
 # For webdriver
 BROWSER=chrome
 CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
 
 # For API Endpoints
-API_URL = http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/api
+API_URL = http://localhost:5173/api
 PHASES = /phases
 HEALTH_INDICATOR_COUNTRIES = /countries_health_indicator_scores
