--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -20,9 +20,11 @@ ADMIN_URL = http://admin:admin@gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/
 
 # For webdriver
 BROWSER=chrome
-CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
+#CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
 
 # For API Endpoints
-API_URL = http://localhost:5173/api
+API_URL = http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/api
 PHASES = /phases
+INDICATORS = /health_indicator_options
 HEALTH_INDICATOR_COUNTRIES = /countries_health_indicator_scores
+COUNTRIES = /countries
