--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
          run : chmod +x gradlew
 
        - name: Run Gauge for UI
-         run: ./gradlew clean gauge -Ptags='ui'
+         run: CHROME_HEADLESS=false ./gradlew clean gauge -Ptags='ui'
          continue-on-error: true
 
        - name: Run Gauge for APIs
