--- a/env/showcase/showcase.properties
+++ b/env/showcase/showcase.properties
@@ -11,19 +11,16 @@ screenshot_on_failure = true
 logs_directory = build/logs
 
 # Application properties
-APP_BASE_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/map
-INPUT_FORM_URL=http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
-ADMIN_URL = http://admin:admin@gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/admin/
-#APP_BASE_URL=http://localhost:5173/map
-#INPUT_FORM_URL=http://localhost:5173/health_indicator_questionnaire
-#ADMIN_URL = http://admin:admin@localhost:5173/admin/
+APP_BASE_URL=http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/map
+INPUT_FORM_URL=https://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/health_indicator_questionnaire
+ADMIN_URL = http://admin:admin@gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/admin/
 
 # For webdriver
 BROWSER=chrome
 #CHROME_DRIVER_PATH=/usr/local/bin/chromedriver
 
 # For API Endpoints
-API_URL = http://gdhi-qa-lb-555763789.us-east-1.elb.amazonaws.com/api
+API_URL = http://gdhi-showcase-lb-602552207.us-east-1.elb.amazonaws.com/api
 PHASES = /phases
 INDICATORS = /health_indicator_options
 HEALTH_INDICATOR_COUNTRIES = /countries_health_indicator_scores
