--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,9 @@ jobs:
 
        - name: grant permissions
          run : chmod +x gradlew
+         
+       - name: prerequisite sql script
+         run : PGPASSWORD={{secrets.DB_QA_PASSWORD}} psql -h {{secrets.DB_QA_HOST}} -U {{secrets.DB_QA_USER}} -d 'gdhi_qa' < data_reset.sql
 
        - name: Run Gauge for UI
          run: CHROME_HEADLESS=false ./gradlew clean gauge -Ptags='ui'
