--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,13 +35,10 @@ jobs:
        - name: grant permissions
          run : chmod +x gradlew
          
-       - name: Testing dir
-         run : pwd
-         
        - name: prerequisite sql script
          run : |
-              PGPASSWORD={{ secrets.DB_QA_PASSWORD }} psql -h {{ secrets.DB_QA_HOST }} -U {{ secrets.DB_QA_USER }} -d 'gdhi_qa' < data_reset.sql
-
+              PGPASSWORD=${{ secrets.DB_QA_PASSWORD }} psql -h ${{ secrets.DB_QA_HOST }} -U ${{ secrets.DB_QA_USER }} -d 'gdhi_qa' < data_reset.sql
+     
        - name: Run Gauge for UI
          run: CHROME_HEADLESS=false ./gradlew clean gauge -Ptags='ui'
          continue-on-error: true
