--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     
-    env:
-      PGHOST: ${{ secrets.DB_QA_HOST }}
-      PGPORT: '5432'
-      PGDATABASE: ${{ secrets.DB_QA_NAME }}
-      PGUSER: ${{ secrets.DB_QA_USER }}
-      PGPASSWORD: ${{ secrets.DB_QA_PASSWORD }}
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+    
+        env:
+          POSTGRES_HOST: ${{ secrets.DB_QA_HOST }}
+          POSTGRES_PORT: '5432'
+          POSTGRES_DATABASE: ${{ secrets.DB_QA_NAME }}
+          POSTGRES_USER: ${{ secrets.DB_QA_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.DB_QA_PASSWORD }}
 
     steps:
        - name: check out code
