--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,11 @@ jobs:
        - name: Install psql
          run: sudo apt-get install -y postgresql-client
          
-       - name: testing file
-         run: pwd ; ls
+       - name: testing 
+         run: sudo systemctl status postgresql
+         
+       - name: checking socket
+         run: sudo netstat -lnp | grep postgres
          
        - name: prerequisite sql script
          run : psql -f data_reset.sql
