--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,9 @@ jobs:
        - name: logs
          run: sudo cat /var/log/postgresql/postgresql-14-main.log
          
+       - name: nslookup
+         run: netstat -ntualp|grep "127.0.0.1:5432" 
+         
        - name: prerequisite sql script
          run : psql -f data_reset.sql
          
