--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,8 +82,8 @@ jobs:
        - name: check pgconf file
          run: sudo cat /etc/postgresql/14/main/postgresql.conf
          
-       - name: nslookup
-         run: sudo netstat -ntualp|grep "127.0.0.1:5432" 
+       - name: check the lib file
+         run: sudo ls /var/lib/postgresql 
          
        - name: prerequisite sql script
          run : psql -f data_reset.sql
