--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,8 +70,8 @@ jobs:
        - name: change permissions
          run: sudo chmod 644 /etc/hosts
          
-       - name: restart cluster
-         run: sudo pg_ctlcluster 14 main start
+ #      - name: restart cluster
+ #        run: sudo pg_ctlcluster 14 main start
          
        - name: check the cluster
          run: systemctl status postgresql@14-main.service
