--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,19 +65,16 @@ jobs:
          run: sudo chmod 700 -R /var/lib/postgresql/14/main
          
        - name : check the pg_hba file
-         run : cat /etc/postgresql/14/main/pg_hba.conf
+         run : sudo cat /etc/postgresql/14/main/pg_hba.conf
          
  #      - name: uncomment file in pgconf
  #        run: sed -i 's/^#listen_addresses/listen_addresses/' /etc/postgresql/14/main/postgresql.conf
-         
-       - name: check2
-         run: sudo -i -u postgres
-         
+                  
        - name: restart service
          run: sudo systemctl restart postgresql
          
 #       - name: check3
-#         run: /usr/lib/postgresql/14/bin/pg_ctl restart -D /var/lib/postgresql/14/main
+#         run: sudo /usr/lib/postgresql/14/bin/pg_ctl restart -D /var/lib/postgresql/14/main
          
        - name: check
          run: pg_lsclusters
