--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,14 +64,17 @@ jobs:
        - name: change cluster permissions
          run: sudo chmod 700 -R /var/lib/postgresql/14/main
          
-       - name : check the pg_hba file
-         run : sudo cat /etc/postgresql/14/main/pg_hba.conf
+       - name: uncomment file in pgconf
+         run: sed -i 's/^#listen_addresses/listen_addresses/' /etc/postgresql/14/main/postgresql.conf
          
- #      - name: uncomment file in pgconf
- #        run: sed -i 's/^#listen_addresses/listen_addresses/' /etc/postgresql/14/main/postgresql.conf
+       - name: uncomment file in pbhba
+         run: sed -i 's/127.0.0.1\/32/0.0.0.0\/0/' /etc/postgresql/14/main/pg_hba.conf
                   
        - name: restart service
          run: sudo systemctl restart postgresql
+         
+       - name: sudo service postgresql restart
+         run: sudo service postgresql restart
          
 #       - name: check3
 #         run: sudo /usr/lib/postgresql/14/bin/pg_ctl restart -D /var/lib/postgresql/14/main
