GHDT82 || Rama || API E2E Test

--- a/env/showcase/showcase.properties
+++ b/env/showcase/showcase.properties
@@ -30,3 +30,15 @@ BFF_YEARS= /bff/distinct_year
 SUBMIT_YEAR= /default_year/submit
 GLOBAL_EXPORT= /export_global_data
 COUNTRY_EXPORT_DATA= /export_country_data/THA
+GENERATE_URL = /countries/REPLACE_TEXT/generate_url
+COUNTRIES_SUMMARY_STATUS = /countries/country_status_summaries
+COUNTRY_DATA = /countries/REPLACE_TEXT?year=2023
+SAVE = /countries/save
+SUBMIT = /countries/submit
+SAVECORRECTION = /countries/saveCorrection
+PUBLISH = /countries/publish/2023
+VIEW_PUBLISH = /countries/viewPublish/REPLACE_TEXT/2023
+COUNTRY_SUMMARY = /countries/REPLACE_TEXT/country_summary
+HEALTH_INDICATORS = /countries/REPLACE_TEXT/health_indicators
+DEVELOPMENT_INDICATORS = /countries/REPLACE_TEXT/development_indicators
+BENCHMARK = /countries/REPLACE_TEXT/benchmark/-1
