ramakrishna || Score and global indicators validation

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -45,3 +45,5 @@ COUNTRY_SUMMARY = /countries/REPLACE_TEXT/country_summary
 HEALTH_INDICATORS = /countries/REPLACE_TEXT/health_indicators
 DEVELOPMENT_INDICATORS = /countries/REPLACE_TEXT/development_indicators
 BENCHMARK = /countries/REPLACE_TEXT/benchmark/-1
+REJECT = /countries/REPLACE_TEXT/delete/2023
+GLOBAL_INDICATORS = /global_health_indicators
