Validation for regions

--- a/env/showcase/showcase.properties
+++ b/env/showcase/showcase.properties
@@ -44,3 +44,4 @@ DEVELOPMENT_INDICATORS = /countries/REPLACE_TEXT/development_indicators
 BENCHMARK = /bff/countries/REPLACE_TEXT/benchmark/-1
 REJECT = /countries/REPLACE_TEXT/delete/2023
 GLOBAL_INDICATORS = /global_health_indicators
+Regions = /regions
