BE scripts for published years

--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -48,3 +48,5 @@ BENCHMARK = /bff/countries/REPLACE_TEXT/benchmark/-1
 REJECT = /countries/REPLACE_TEXT/delete/2023
 GLOBAL_INDICATORS = /global_health_indicators
 Regions = /regions
+PUBLISHED_YEARS = /countries/REPLACE_TEXT/published_years
+COUNTRY_PROGRESS_OVER_YEARS = /countries/REPLACE_TEXT/year_on_year
