added regions tests

--- a/env/showcase/showcase.properties
+++ b/env/showcase/showcase.properties
@@ -47,3 +47,5 @@ GLOBAL_INDICATORS = /global_health_indicators
 Regions = /regions
 PUBLISHED_YEARS = /countries/REPLACE_TEXT/published_years
 COUNTRY_PROGRESS_OVER_YEARS = /countries/REPLACE_TEXT/year_on_year
+REGION_GET_YEARS = /region/REPLACE_TEXT/get_years
+REGION_GET_DATA = /region/REPLACE_TEXT?list_of_years=2023,Version1
