--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:5.3.0'
     testImplementation 'org.seleniumhq.selenium:selenium-java:3.11.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+    implementation 'ru.yandex.qatools.ashot:ashot:1.5.4'
 }
 
 task gaugeQA(type: GaugeTask) {
